tests/ui/macros/issue-78325-inconsistent-resolution.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/issue-78325-inconsistent-resolution.rs:5:9
   |
LL |         extern crate std as core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_other_core!();
   | -------------------- in this macro invocation
   |
   = note: this error originates in the macro `define_other_core` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0659]: `core` is ambiguous
  --> $DIR/issue-78325-inconsistent-resolution.rs:11:5
   |
LL |     core::panic!();
   |     ^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `core` could refer to a built-in crate
note: `core` could also refer to the crate imported here
  --> $DIR/issue-78325-inconsistent-resolution.rs:5:9
   |
LL |         extern crate std as core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_other_core!();
   | -------------------- in this macro invocation
   = help: use `crate::core` to refer to this crate unambiguously
   = note: this error originates in the macro `define_other_core` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0659]: `core` is ambiguous
  --> $DIR/issue-78325-inconsistent-resolution.rs:12:7
   |
LL |     ::core::panic!();
   |       ^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `core` could refer to a built-in crate
note: `core` could also refer to the crate imported here
  --> $DIR/issue-78325-inconsistent-resolution.rs:5:9
   |
LL |         extern crate std as core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_other_core!();
   | -------------------- in this macro invocation
   = note: this error originates in the macro `define_other_core` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0659`.
